# applications-download

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prospector-ignore.yaml  .prospector.yaml  README.md  SECURITY.md  jsonschema-gentypes.yaml  pyproject.toml  requirements.txt
.github/: publish.yaml  renovate.json5  requirements.txt
.github/workflows/: main.yaml  pull-request-automation.yaml
.opencode/skills/adding-applications/: SKILL.md
application_download/: __init__.py  applications-schema.json  applications.py  applications.yaml  applications_definition.py  cli.py  versions.yaml
applications_download/: __init__.py  applications-schema.json  applications.yaml  applications_definition.py  cli.py  versions.yaml
