[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = [
  "UP", # pyupgrade
  "F", # Pyflakes
  "E", "W", # Pycodestyle
  "I", # isort
  "S", # flake8-bandit
  "SIM", # flake8-simplify
  "B", # flake8-bugbear
  # pydocstyle
  "D213", "D214", "D215", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D413", "D416", "D417",
]
ignore= [
  "S101", # Use of assert detected
  "S607", # start-process-with-partial-path
  "S603", # subprocess-without-shell-equals-true
]
exclude = ["applications_download/applications_definition.py"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
[tool.poetry]
name = "applications-download"
version = "0.0.0"
description = "Tools used to publish Python packages, Docker images and Helm charts for GitHub tag and branch"
readme = "README.md"
authors = ["Camptocamp <info@camptocamp.com>"]
keywords = ["ci"]
repository = "https://github.com/camptocamp/applications-download"
license = "FreeBSD"
packages = [{ include = "applications_download" }]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
include = [
    "applications_download/py.typed",
    "applications_download/*.json",
    "applications_download/*.yaml",
]

[tool.poetry.scripts]
applications-download = "applications_download.cli:main"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "2.32.3"
PyYAML = "6.0.2"
"ruamel.yaml" = "0.18.10"
jsonschema-validator-new  = "0.3.2"
#jsonschema-validator  = "0.1.0"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.14.0", extras = ["with-bandit", "with-mypy", "with-pyroma", "with_ruff", "with_pyroma"] }
prospector-profile-duplicated = "1.10.4"
prospector-profile-utils = "1.17.0"
types-requests = "2.32.0.20241016"
types-pyyaml = "6.0.12.20241230"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-plugin-tweak-dependencies-version",
    "poetry-plugin-drop-python-upper-constraint",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"
