[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
extend-select = [
  "UP", # pyupgrade
  "F", # Pyflakes
  "E", "W", # Pycodestyle
  "I", # isort
  "S", # flake8-bandit
  "SIM", # flake8-simplify
  "B", # flake8-bugbear
  # pydocstyle
  "D213", "D214", "D215", "D405", "D406", "D407", "D408", "D409", "D410", "D411", "D413", "D416", "D417",
]
ignore= [
  "S101", # Use of assert detected
  "S607", # start-process-with-partial-path
  "S603", # subprocess-without-shell-equals-true
]
exclude = ["applications_download/applications_definition.py"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "2.32.3"
PyYAML = "6.0.2"
"ruamel.yaml" = "0.18.11"
jsonschema-validator-new  = "0.3.2"
#jsonschema-validator  = "0.1.0"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.1", extras = ["with-bandit", "with-mypy", "with-pyroma", "with_ruff", "with_pyroma"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.22.3"
types-requests = "2.32.0.20250515"
types-pyyaml = "6.0.12.20250516"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"

[project]
dynamic = ["dependencies", "version"]
name = "applications-download"
description = "Tools used to publish Python packages, Docker images and Helm charts for GitHub tag and branch"
readme = "README.md"
keywords = ["ci"]
license = "FreeBSD"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
packages = [{ include = "applications_download" }]
include = [
    "applications_download/py.typed",
    "applications_download/*.json",
    "applications_download/*.yaml",
]
requires-python = ">=3.10"
dependencies = ["requests<3,>=2", "PyYAML<7,>=6", "ruamel.yaml<1,>=0", "jsonschema-validator-new<1,>=0"]

[project.urls]
repository = "https://github.com/camptocamp/applications-download"
"Bug Tracker" = "https://github.com/camptocamp/applications-download/issues"

[project.scripts]
applications-download = "applications_download.cli:main"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-plugin-tweak-dependencies-version",
]
build-backend = "poetry.core.masonry.api"
