[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = []
ignore = ["ANN401", "C90", "D100", "D104", "D105", "D107", "D200", "D202", "D207", "D208", "D212", "E501", "EM101", "EM102", "ERA001", "FA", "FBT001", "FBT002", "FIX002", "I001", "PERF203", "PLR09", "PLR2004", "Q000", "S101", "SIM105", "T201", "TD002", "W293"]
extend-select = ["UP", "I", "S", "B", "ALL"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**" = ["D", "E722", "INP001", "RUF100"]
"**/tests/**" = ["D", "E722", "INP001", "RUF100"]
"**/test_*.py" = ["D", "E722", "INP001", "RUF100"]
"**/*_test.py" = ["D", "E722", "INP001", "RUF100"]

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "2.32.4"
PyYAML = "6.0.2"
"ruamel.yaml" = "0.18.14"
jsonschema-validator-new  = "0.3.2"
#jsonschema-validator  = "0.1.0"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.3", extras = ["with-bandit", "with-mypy", "with-pyroma", "with_ruff", "with_pyroma"] }
prospector-profile-duplicated = "1.10.5"
prospector-profile-utils = "1.26.1"
types-requests = "2.32.4.20250611"
types-pyyaml = "6.0.12.20250516"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"

[project]
dynamic = ["dependencies", "version"]
name = "applications-download"
description = "Tools used to publish Python packages, Docker images and Helm charts for GitHub tag and branch"
readme = "README.md"
keywords = ["ci"]
license = "FreeBSD"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
packages = [{ include = "applications_download" }]
include = [
    "applications_download/py.typed",
    "applications_download/*.json",
    "applications_download/*.yaml",
]
requires-python = ">=3.10"
dependencies = ["requests<3,>=2", "PyYAML<7,>=6", "ruamel.yaml<1,>=0", "jsonschema-validator-new<1,>=0"]

[project.urls]
repository = "https://github.com/camptocamp/applications-download"
"Bug Tracker" = "https://github.com/camptocamp/applications-download/issues"

[project.scripts]
applications-download = "applications_download.cli:main"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
]
build-backend = "poetry.core.masonry.api"
